--- a/css/style.css
+++ b/css/style.css
@@ -1960,7 +1960,24 @@ ul {
     /* rotated pour top-right corner de la card: */
     border-bottom-right-radius: 10px;
     transform: rotate(270deg);
-    
+}
+
+.outilsShape {
+    position: absolute;
+    width: 60%;
+    opacity: 0.25;
+    bottom: 0;
+    right: 0;
+    border-bottom-right-radius: 10px;
+}
+
+.langsShape {
+    position: absolute;
+    width: 50%;
+    opacity: 0.18;
+    bottom: 0;
+    left: 0;
+    border-bottom-right-radius: 10px;
 }
 
 
