Fix filter + fixed (ajout :before) & WIP modal gallerie

--- a/css/styleMediaQueries2k.css
+++ b/css/styleMediaQueries2k.css
@@ -141,7 +141,7 @@
         height:auto; 
         margin:auto; 
         vertical-align:middle; 
-        border-radius:10px;
+        /* border-radius:10px; */
     }
 
     .galerieDiv {
