--- a/css/style.css
+++ b/css/style.css
@@ -3489,6 +3489,8 @@ ul {
 
 
 .images {
+    overflow: hidden;
+    border-radius: 10px;
     opacity: 0;
 }
 
@@ -4327,7 +4329,7 @@ ul {
 .photosGallerie {
     /* opacity: 1; */
     display: block;
-    width: 250px;
+    width: 240px;
     margin: auto;
     border-radius: 2px;
     filter: blur(0px);
@@ -4365,7 +4367,7 @@ ul {
     margin-block-end:0em; 
 
     color:rgba(242, 228, 227, 0.9);
-    background: rgba(14, 20, 140, 0.4);
+    background: rgb(0 0 0 / 60%);
 
     z-index: 1;
 
@@ -4378,11 +4380,12 @@ ul {
 }
 
 .location-image img {
-    filter: blur(0px);
-    transition: filter 0.3s ease-in;
+    /* filter: blur(0px); */
+    transition: all 0.4s ease;
   }
   .location-listing:hover .location-image img {
-    filter: blur(2px);
+    /* filter: blur(2px); */
+    transform: scale(1.2);
   }
 
 .modal {
@@ -4402,11 +4405,12 @@ ul {
 
 .modal-image {
     margin: auto;
+    margin-bottom: 25px !important;
     display: block;
     width: 90%;
     max-width: 800px;
 
-    border-radius: 4px;
+    border-radius: 10px;
     /* border: 2px solid rgba(239, 59, 45, 0.3); */
 }
 .modal-image:hover {
@@ -4434,17 +4438,20 @@ ul {
     to {transform:scale(1)}
 }
 
-.close {
+.closeModal {
     position: absolute;
+    z-index: 99999999;
     top: 37px;
-    right: 35px;
+    right: 130px;
     color: #f1f1f1;
     font-size: 5em;
     font-weight: bold;
+
+    animation: fadeIn 0.7s 0s ease forwards;
     transition: 0.3s;
 }
 
-.close:hover, .close:focus {
+.closeModal:hover, .closeModal:focus {
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
@@ -4590,11 +4597,12 @@ ul {
 
 
 .imgGalleries {
-    width:90%; 
+    /* width:90%;  */
+    width: 100%;
     height:auto; 
     margin:auto; 
     vertical-align:middle; 
-    border-radius:10px;
+    /* border-radius:10px; */
 }
 
 
@@ -4602,7 +4610,7 @@ ul {
 
 #photographieTitle {
     /* Clickable pour opacity 0/1 des images (voir l'aquarium) temporaire: deplacer dans un vrai bouton */
-    cursor: pointer;
+    /* cursor: pointer; */
 
     color: #ef3b2d;
     text-align: center;
@@ -7197,25 +7205,36 @@ li.veilleLigneAjout::before {
     z-index: 5;
 }
 
-.bodyLoisir {
+#bodyLoisir:before {
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
     animation: contrastEffect 0.4s 2.9s ease-in-out forwards;
+}
+.bodyLoisir {
+    /* animation: contrastEffect 0.4s 2.9s ease-in-out forwards; */
 }
 @keyframes contrastEffect {
     0% {
-        filter: grayscale(0.);
+        backdrop-filter: grayscale(0) brightness(1);
     }
     50% {
         /* filter: grayscale(0.9) brightness(1); */
-        filter: grayscale(1);
+        backdrop-filter: grayscale(1) brightness(1.3);
     }
     57% {
         /* filter: grayscale(0.9) brightness(1); */
-        filter: grayscale(1);
+        backdrop-filter: grayscale(1) brightness(1.3);
     }
     100% {
-        filter: drop-shadow(2px 4px 6px black);
+        backdrop-filter: drop-shadow(2px 4px 6px black);
     }
 }
+
+
 
 #flashRectangle {
     position: absolute;
