--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -210,10 +210,22 @@
     }
 
     .close {
-        top: 15px;
+        /* top: 15px;
         right: 35px;
         font-size: 40px;
         font-weight: bold;
+        transition: 0.3s; */
+    }
+    .closeModal {
+        position: absolute;
+        z-index: 99999999;
+        top: 65px;
+        right: 19px;
+        color: #f1f1f1;
+        font-size: 4em;
+        font-weight: bold;
+
+        animation: fadeIn 0.7s 0s ease forwards;
         transition: 0.3s;
     }
 
@@ -339,6 +351,7 @@
 
     #photographieTitle {
         margin-top: 30px;
+        margin-block-end: 0.9em;
         font-size: 2.5em;
         -webkit-box-reflect: below -4px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white));
         /* opacity: 0;
@@ -371,6 +384,49 @@
         100% {
             opacity: 1;
         }
+    }
+
+    #messageGalerie {
+        margin-block-end: 0;
+
+        animation: fadeIn 0.5s 2.2s ease forwards;
+    }
+    .galerieDiv {
+        margin: 0 0px;
+        padding: 15px;
+        background-color: #00000054;
+        box-shadow: 0 0 24px -10px #19ddbcb3;
+
+        border-radius: 18px;
+
+        opacity: 0;
+
+        animation: fadeIn 0.7s 2s ease forwards;
+    }
+    .images {
+        border-radius: 7px;
+    }
+
+    #caption {
+        height: auto;
+    }
+    #arrowPrevious {
+        font-size: 3.3em;
+        color: white;
+        width: 85px;
+        position: absolute;
+        left: 2%;
+        font-weight: bold;
+        text-align: center;
+    }
+    #arrowNext {
+        font-size: 3.3em;
+        color: white;
+        width: 85px;
+        position: absolute;
+        right: 2%;
+        font-weight: bold;
+        text-align: center;
     }
     
     .accueilPageContent {
@@ -2305,7 +2361,7 @@
         position: fixed !important;
         display: none;
 
-        right: 10px;
+        right: 13px;
         top: 5px;
         z-index: 999999999;
 
@@ -2554,7 +2610,8 @@
         display: grid; 
         grid-template-columns: 1fr 1fr; 
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; 
-        gap: 20px 20px; 
+        /* gap: 20px 20px;  */
+        gap: 15px 15px; 
         grid-template-areas: 
           "photo1 photo2"
           "photo3 photo4"
@@ -2610,7 +2667,9 @@
 
     
     .modal-image {
-        width: 98%;
+        /* width: 98%; */
+        width: 90%;
+        margin: 0 auto;
     }
 
 
@@ -2931,7 +2990,8 @@
     
         position: absolute;
         left: 50%;
-        transform: translateX(-50%) translateY(-4.8em);
+        /* transform: translateX(-50%) translateY(-4.8em); */
+        transform: translateX(-50%) translateY(-3.8em);
     
         --mask:
             radial-gradient(33.54px at 50% 45.00px,#000 99%,#0000 101%) calc(50% - 30px) 0/60px 100%,
@@ -3205,9 +3265,17 @@
         }
     }
 
-
-    .bodyLoisir {
+    #bodyLoisir:before {
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
         animation: contrastEffect 0.4s 4.9s ease-in-out forwards;
+    }
+    .bodyLoisir {
+        /* animation: contrastEffect 0.4s 4.9s ease-in-out forwards; */
     }
   
 
@@ -3402,6 +3470,7 @@
         top: 0;
         right: 25px;
         font-size: 42px;
+        font-weight: bold;
         /* color: #ef3b2d; */
         color: #f0f2f5;
         z-index: 999999;
