--- a/css/styleMediaQueries2k.css
+++ b/css/styleMediaQueries2k.css
@@ -144,6 +144,10 @@
         /* border-radius:10px; */
     }
 
+    .loupesGalerie {
+        font-size: 4em;
+    }
+
     .galerieDiv {
         /* margin: 0 251px; */
         margin: 0 10px;
