--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -114,6 +114,12 @@
         gap: 6px;
     }
 
+    #socialBurgerContainer {
+        opacity: 0;
+    }
+    #lablelsBurgerContainer {
+        opacity: 0;
+    }
     .socialBurgerContainer {
         position: absolute;
         display: inline-flex;
@@ -387,7 +393,7 @@
     }
 
     #messageGalerie {
-        margin-block-end: 0;
+        margin-block-end: 0.2em;
 
         animation: fadeIn 0.5s 2.2s ease forwards;
     }
@@ -490,9 +496,9 @@
     }
 
     .menuButton:hover {
-        animation-name: none;
+        /* animation-name: none;
         animation-duration: 0s;
-        background: transparent;
+        background: transparent; */
     }
     @keyframes hoverMenuButton {
         from {
@@ -2063,6 +2069,8 @@
         opacity: 0;
         z-index: 999999999;
 
+        overflow: hidden;
+
         font-size: 1.3em;
 
         position: fixed;
@@ -2082,10 +2090,15 @@
 
         transition: 0.4s;
     }
+    #scrollToTopIcon {
+        transition: all 0.3s;
+    }
     .scrollToTopIcon {
         position: relative;
         top: 1px;
         left: 1px;
+
+        /* transition: all 0.3s; */
     }
 
 
@@ -2662,7 +2675,7 @@
     }
     
     .loupesGalerie {
-        font-size:1em;
+        font-size: 2em;
     }
 
     
@@ -2673,6 +2686,12 @@
     }
 
 
+    .menuButton {
+        opacity: 0;
+    }
+    .fadeInNavBurgerLi {
+        animation: fadeIn 0.6s 0s ease forwards;
+    }
 
 
 
