--- a/css/styleMediaQueries.css
+++ b/css/styleMediaQueries.css
@@ -1632,20 +1632,92 @@
 
 
 
-    .outilsAnim {
+
+
+    .formationsAnim {
         animation-name: fadeInFormation;
-        animation-duration: 2s;
-        /* animation-delay: 3.5s; */
+        animation-duration: 1.6s;
+        /* animation-delay: 0.5s; */
         animation-fill-mode: forwards;
     }
+
+    .hobbiesAnim {
+        animation-name: fadeInHobbys;
+        animation-duration: 1.6s;
+        animation-fill-mode: forwards;
+    }
+
+    .competencesAnim {
+        animation-name: fadeInCompetences;
+        animation-duration: 1.6s;
+        animation-fill-mode: forwards;
+    
+    }
+
+    .outilsAnim {
+        animation-name: fadeInFormation;
+        animation-duration: 1.6s;
+        /* animation-delay: 5.5s; */
+        animation-fill-mode: forwards;
+    }
+
+    .langsAnim {
+        animation-name: fadeInLangs;
+        animation-duration: 1.6s;
+        /* animation-delay: 4.5s; */
+        animation-fill-mode: forwards;
+    }
+
+/* 
+    #formations {
+        left: -300px;
+        opacity: 0;
+    } */
+
+
     @keyframes fadeInFormation {
         from {
-            left: -500px;
+            left: -250px;
             opacity: 0;
     
         }
         to {
             left: 0px;
+            opacity: 1;
+        }
+    }
+
+    @keyframes fadeInHobbys {
+        from {
+            right: -250px;
+            opacity: 0;
+    
+        }
+        to {
+            right: 0px;
+            opacity: 1;
+        }
+    }
+
+    @keyframes fadeInCompetences {
+        from {
+            opacity: 0;
+            transform: scale(0.93);
+        }
+        to {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+
+    @keyframes fadeInLangs {
+        from {
+            right: -250px;
+            opacity: 0;
+    
+        }
+        to {
+            right: 0px;
             opacity: 1;
         }
     }
@@ -1995,17 +2067,7 @@
         right: 0;
     }
 
-    @keyframes fadeInHobbys {
-        from {
-            right: -500px;
-            opacity: 0;
-    
-        }
-        to {
-            right: 0px;
-            opacity: 1;
-        }
-    }
+
 
     .docAdminGrid {
         display: grid; 
@@ -2314,6 +2376,8 @@
         margin-top: 30px;
 
         padding: 64px 11px 2px 11px;
+
+        box-shadow: 0px 0px 25px 0px #00ffff12;
     }
     .gridCompetences {  
         transform: none;
